# xrootd-auth-forward-client-cred

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindXRootD.cmake
src/: AuthForwardClientCred.cc  AuthForwardClientCred.hh  AuthForwardClientId.cc  AuthForwardClientId.hh  CMakeLists.txt
